# hyperzexe

./: .gitignore  Cargo.toml
hyperplonk/: Cargo.toml
hyperplonk/benches/: bench.rs
hyperplonk/src/: backend.rs  lib.rs  mock.rs  snark.rs  structs.rs  utils.rs
hyperplonk/src/backend/: pcs.rs  piop.rs  util.rs
hyperplonk/src/backend/pcs/: multilinear_hyrax.rs  prelude.rs  readme.md
hyperplonk/src/backend/pcs/multilinear_hyrax/: batching.rs  commitments.rs  dense_mlpoly.rs  gens.rs  nizk.rs  random.rs
hyperplonk/src/backend/pcs/multilinear_hyrax/nizk/: bullet.rs
hyperplonk/src/backend/piop/: lookup_check.rs  perm_check.rs  preprocess.rs  prover.rs  sum_check.rs  util.rs  verifier.rs
hyperplonk/src/backend/piop/lookup_check/: commit.rs
hyperplonk/src/backend/piop/perm_check/: commit.rs
hyperplonk/src/backend/piop/sum_check/: classic.rs
hyperplonk/src/backend/piop/sum_check/classic/: coeff.rs  eval.rs
hyperplonk/src/backend/poly/: multilinear.rs  univariate.rs
hyperplonk/src/backend/util/: arithmetic.rs  expression.rs  hash.rs  parallel.rs  transcript.rs
hyperplonk/src/backend/util/arithmetic/: bh.rs  msm.rs
hyperplonk/src/frontend/: halo2.rs
hyperplonk/src/frontend/halo2/: circuit.rs
hyperzexe/: Cargo.toml
hyperzexe-ecc/: Cargo.toml
hyperzexe-ecc/src/: ecc.rs  fields.rs  lib.rs  native_curve.rs  native_ecc.rs
hyperzexe-ecc/src/ecc/: fixed_base.rs  fixed_base_pippenger.rs  pippenger.rs
hyperzexe-ecc/src/fields/: fp.rs  fp12.rs  fp2.rs  tests.rs
hyperzexe-ecc/src/native_curve/: final_exp.rs  tests.rs
hyperzexe-ecc/src/native_curve/results/: pairing_bench.csv
hyperzexe-ecc/src/native_curve/tests/: ec_add.rs  fixed_base_msm.rs  msm.rs
hyperzexe-ecc/src/native_ecc/: fixed_base.rs  pippenger.rs  tests.rs
hyperzexe/src/: halo2_verifier.rs  hyperplonk_verifier.rs  lib.rs
hyperzexe/src/halo2_verifier/: cost.rs  loader.rs  pcs.rs  verifier.rs
hyperzexe/src/halo2_verifier/loader/: halo2.rs  native.rs
hyperzexe/src/halo2_verifier/loader/evm/: code.rs  loader.rs  test.rs  util.rs
hyperzexe/src/halo2_verifier/loader/evm/test/: tui.rs
hyperzexe/src/halo2_verifier/loader/evm/util/: executor.rs
hyperzexe/src/halo2_verifier/loader/halo2/: loader.rs  shim.rs  test.rs
hyperzexe/src/halo2_verifier/pcs/: ipa.rs  kzg.rs
hyperzexe/src/halo2_verifier/pcs/ipa/: accumulation.rs  decider.rs
hyperzexe/src/halo2_verifier/pcs/ipa/multiopen/: bgh19.rs
hyperzexe/src/halo2_verifier/pcs/kzg/: accumulation.rs  accumulator.rs  decider.rs
hyperzexe/src/halo2_verifier/pcs/kzg/multiopen/: bdfg21.rs  gwc19.rs
hyperzexe/src/halo2_verifier/system/: halo2.rs
hyperzexe/src/halo2_verifier/system/halo2/: aggregation.rs  test.rs  transcript.rs
hyperzexe/src/halo2_verifier/system/halo2/test/: circuit.rs  kzg.rs
hyperzexe/src/halo2_verifier/system/halo2/test/circuit/: maingate.rs  standard.rs
hyperzexe/src/halo2_verifier/system/halo2/test/kzg/: evm.rs  halo2.rs  native.rs
hyperzexe/src/halo2_verifier/system/halo2/transcript/: evm.rs  halo2.rs
hyperzexe/src/halo2_verifier/util/: arithmetic.rs  hash.rs  msm.rs  poly.rs  protocol.rs  transcript.rs
hyperzexe/src/halo2_verifier/util/hash/: poseidon.rs
hyperzexe/src/halo2_verifier/verifier/: plonk.rs
hyperzexe/src/hyperplonk_verifier/: pcs.rs  sumcheck.rs  system.rs  util.rs  verifier.rs
hyperzexe/src/hyperplonk_verifier/pcs/: hyrax.rs
hyperzexe/src/hyperplonk_verifier/pcs/hyrax/: bulletproof.rs  dot_product.rs
hyperzexe/src/hyperplonk_verifier/sumcheck/: classic.rs  sumcheck_round.rs  util.rs
hyperzexe/src/hyperplonk_verifier/sumcheck/classic/: eval.rs
hyperzexe/src/hyperplonk_verifier/system/: hyperplonk.rs  transcript.rs
hyperzexe/src/hyperplonk_verifier/system/transcript/: halo2.rs
hyperzexe/src/hyperplonk_verifier/util/: arithmetic.rs  poly.rs  transcript.rs
hyperzexe/src/hyperplonk_verifier/verifier/: hyperplonk.rs
subroutines/: Cargo.toml
subroutines/benches/: iop_bench.rs  pcs_bench.rs
subroutines/src/pcs/: errors.rs  mod.rs  prelude.rs  structs.rs
subroutines/src/pcs/multilinear_hyrax/: batching.rs  commitments.rs  dense_mlpoly.rs  gens.rs  mod.rs  random.rs
subroutines/src/pcs/multilinear_hyrax/nizk/: bullet.rs  mod.rs
subroutines/src/poly_iop/: mod.rs  prelude.rs
subroutines/src/poly_iop/lookup_check/: mod.rs  util.rs
subroutines/src/poly_iop/perm_check/: mod.rs
subroutines/src/poly_iop/prod_check/: mod.rs
transcript/src/: lib.rs
