[package]
name = "hyperplonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.6"
num-bigint = "0.4.3"
num-integer = "0.1.45"
itertools = "0.10.5"
displaydoc = { version = "0.2.3", default-features = false }
rand = "0.8"
merlin = "2.0.0"

ark-std = { version = "^0.3.0", default-features = false }
ark-serialize =  { version = "^0.3.0", default-features = false }

rayon = { version = "1.5.2", default-features = false, optional = true }

halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.0", package = "halo2curves" }
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", optional = true }

[dev-dependencies]
paste = "1.0.11"

# Benchmarks
[[bench]]
name = "pcs-benches"
path = "benches/pcs_bench.rs"
harness = false

[features]
# default = [ ]
# default = [ "parallel" ]
# default = [ "parallel", "print-trace" ]
default = [ "parallel"]
bench = [ "parallel" ]

parallel = [ 
    "rayon",
    ]