[package]
name = "hyperzexe-ecc"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand = "0.8"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

halo2-base = { git = "https://github.com/scroll-tech/halo2-lib.git", branch = "halo2-ecc-snark-verifier-0220" }
halo2-ecc = { git = "https://github.com/scroll-tech/halo2-lib.git", branch = "halo2-ecc-snark-verifier-0220" }

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
criterion = "0.4"
criterion-macro = "0.4"

[features]
default = ["jemallocator", "halo2-pse", "display"]
dev-graph = ["halo2-base/dev-graph"]
display = ["halo2-base/display"]
halo2-pse = ["halo2-base/halo2-pse"]
# halo2-axiom = ["halo2-base/halo2-axiom"]
jemallocator = ["halo2-base/jemallocator"]
mimalloc = ["halo2-base/mimalloc"]
